Logo grootte gefixed naar 85% contain

--- a/frontend/kantine-display/index.html
+++ b/frontend/kantine-display/index.html
@@ -175,10 +175,10 @@
         .team.away { flex-direction: row-reverse; }
 
         /* Logo - geen zwarte rand */
-        .team-logo img {
-    width: 110%;
-    height: 110%;
-    object-fit: cover;
+.team-logo img {
+    width: 85%;
+    height: 85%;
+    object-fit: contain;
     mix-blend-mode: multiply;
 }
 
